# libr4d

./: .gitignore  INSTALL  Makefile.am  README.adoc  autogen.sh  configure.ac  libr4d-uninstalled.pc.in  libr4d.doxygen.in  libr4d.pc.in  power.c  r4d.c  r4d.h  r4d.wsdl  r4d_client.c  r4d_intern.h  systems.c
debian/: changelog  control  copyright  gbp.conf  not-installed  rules  watch
po/: Makevars  POTFILES.in
