SUBDIRS = po

bin_PROGRAMS = r4d-client
r4d_client_SOURCES = r4d_client.c r4d.h
r4d_client_CFLAGS = -g -O2 -Wall -Wextra -Werror -I$(top_srcdir) \
	@GLIB_CFLAGS@ @UUID_CFLAGS@ \
	 -DDATADIR="\"$(datadir)\"" -DGETTEXT_PACKAGE="\"r4d-client"\"
r4d_client_LDADD = libr4d.la @GLIB_LIBS@ @UUID_LIBS@

lib_LTLIBRARIES = libr4d.la
libr4d_la_SOURCES = r4d.c r4d_intern.h power.c systems.c\
	auto-gen/soapC.c auto-gen/soapClient.c auto-gen/soapH.h \
	auto-gen/r4dBinding.nsmap
libr4d_la_CFLAGS = -g -O2 -Wall -Wextra -Werror -DDEBUG \
	@GLIB_CFLAGS@ @GSOAP_CFLAGS@ @UUID_CFLAGS@
libr4d_la_LIBADD = @GLIB_LIBS@ @GSOAP_LIBS@ @UUID_LIBS@

# 1) If the library source code has changed at all since the last update, then
#    increment revision ("c:r:a" becomes "c:r+1:a").
# 2) If any interfaces have been added, removed, or changed since the last
#    update, increment current, and set revision to 0.
# 3) If any interfaces have been added since the last public release,
#    then increment age.
# 4) If any interfaces have been removed or changed since the last public
#    release, then set age to 0.

libr4d_la_LDFLAGS = -version-info 0:0:0

BUILT_SOURCES = auto-gen/r4dBinding.nsmap \
	auto-gen/r4d.h \
	auto-gen/soapC.c \
	auto-gen/soapClient.c \
	auto-gen/soapClientLib.c \
	auto-gen/soapH.h \
	auto-gen/soapStub.h

CLEANFILES = $(BUILT_SOURCES)

EXTRA_DIST = $(BUILT_SOURCES) libr4d.pc.in libr4d-uninstalled.pc.in \
	typemap.dat

nobase_pkginclude_HEADERS = r4d.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libr4d.pc

auto-gen/r4dBinding.nsmap auto-gen/soapC.c auto-gen/soapClient.c \
auto-gen/soapClientLib.c auto-gen/soapH.h auto-gen/soapStub.h: auto-gen/r4d.h
	soapcpp2 -x -s -c -C -d auto-gen $<

r4d.wsdl:
	wget -O $@ http://localhost:8008/

auto-gen/r4d.h:
	mkdir -p auto-gen
	wsdl2h -v -c -t typemap.dat -o $@ r4d.wsdl

dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
	    echo Creating ChangeLog && \
	    ( cd "$(top_srcdir)" && \
	      echo '# Generated by Makefile. Do not edit.'; echo; \
	      $(top_srcdir)/missing --run git log --stat ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		     echo Failed to generate ChangeLog >&2 ); \
	else \
	    echo A git clone is required to generate a ChangeLog >&2; \
	fi

DISTCLEANFILES = *~

MAINTAINERCLEANFILES = ABOUT-NLS Makefile.in aclocal.m4 compile \
	config.guess config.h.in config.rpath config.sub configure \
	depcomp install-sh libr4d*.tar* ltmain.sh m4/ missing \
	po/Makefile.in.in po/Makevars.template po/Rules-quot po/*.header \
	po/*sin po/*.sed

ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = subdir-objects
